made a footer, and working on a contact page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
           <!--the line below is a placeholder for a video-->
           <!--Need to add an alt tag to the video and links-->
           <iframe width="734" height="413" src="https://www.youtube.com/embed/JC82Il2cjqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <div>
-            <center>
+          <div id="default_div">
                 <h2>What subjects do we plan to teach?</h2>
             <p>
                 <ul>
@@ -36,12 +35,13 @@
                    <li>To include different learning methods, language translations, auditory, videos,<br> articles, and a bunch of learning techniques that make the student comfortable with the way they learn and eliminate the need to confirm which harms their learning capability.</li>
                </ul>
             </p>
-            </center>
         </div>
         </center>
-        <div id="extras">
+        <!--code for making the footer-->
+        <div id="footer">
             <p><a href="Bio.html" style="color:rgb(143, 228, 140) ;">About Us</a></p>
             <p>Contacts</p>
+            
         </div>
     </body>
 </html>
