✏️footer,example lesson

--- a/index.html
+++ b/index.html
@@ -2,46 +2,35 @@
 <html>
     <head>
         <title>LotfiVerma</title>
-        <link rel="stylesheet" href="Stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="Stylesheet.css">
     </head>
     <body>
-        <p>Search:<input type="search" name="search"></p><!--Figure out how to make search bar functional-->
+        <div id="default_div">
+            Search:<input type="search" name="search"><!--Figure out how to make search bar functional-->
         <center>
             <h1 style="text-align: center;">Welcome to the LotfiVerma project</h1>
-        <h4  style="text-align: center;">Education is the key towards self liberation and prosperity</h3>
-          <!--the line below is a placeholder for a video-->
-          <!--Need to add an alt tag to the video and links-->
-          <iframe width="734" height="413" src="https://www.youtube.com/embed/JC82Il2cjqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <div id="default_div">
-                <h2>What subjects do we plan to teach?</h2>
-            <p>
-                <ul>
-                    <li>English Grammar</li>
-                    <li>Math 7, aka 7th grade math</li>
-                    <li>Pre-Algebra</li>
-                    <li>Algebra 1</li>
-                    <li>Environmental Science</li>
-                    <li>Biology</li>
-                    <li>Chemistry</li>
-                    <li>Physics</li>
-                    <!--<li>Computer Programming</li>-->
-                </ul>
-             <h2> What is the purpose of this site? </h2>
-               <ul> 
+        <h4 style="text-align: center;">Education is the key towards self liberation and prosperity</h3>
+          <div id="main">
+            <a href="Architecture/Index.html" style="color:rgb(143, 228, 140);">Learn about Architecture</a>
+             <h2> Our Goals</h2>
+              
+             <ul> 
                    <li>To educate anyone, including non-English speakers</li>
                    <li>Specifically towards low-income students who have a passion for learning but can't afford it</li>
-                   <li>To create a space where students can access the best materials for learning not to need to go on a wild goose chase to get valid and trustworthy knowledge</li>
+                   <li>To create a space where students can access the best materials for learning <br>not to need to go on a wild goose chase to get valid and trustworthy knowledge</li>
                    <li>Prepare students for college-rigor and introduce them to adult life (How to manage your money and how to make passive income which includes investing</li>
                    <li>To include different learning methods, language translations, auditory, videos,<br> articles, and a bunch of learning techniques that make the student comfortable with the way they learn and eliminate the need to confirm which harms their learning capability.</li>
                </ul>
-            </p>
         </div>
         </center>
-        <!--code for making the footer-->
-        <div id="footer">
-            <p><a href="Bio.html" style="color:rgb(143, 228, 140) ;">About Us</a></p>
-            <p>Contacts</p>
-            
         </div>
+        <!--code for making the footer-->
+        <center>
+            <footer id="footer">
+            <a href="Bio.html" style="color:rgb(143, 228, 140) ;">About Us</a>
+            <br>
+            <a href="contacts.html" style="color:rgb(143, 228, 140) ;">Contacts</a>
+            </footer>
+        </center>
     </body>
 </html>
