🎨same stylesheet for lesson

--- a/Architecture/Webpage2.html
+++ b/Architecture/Webpage2.html
@@ -2,18 +2,7 @@
 <html>
     <head>
         <title>Prarie</title>
-        <style type="text/css">
-            body{
-                background-color: darkslategray;
-                color: honeydew;
-                font-family: "Times New Roman";
-                font-size: large;
-            }
-            a{
-                font-size: larger;
-                color:lightseagreen;
-            }
-            </style>
+        <link rel="stylesheet" type="text/css" href="Stylesheet.css">
     </head>
     <body>
         <center>
