Add basic Layout for Intro to chemistry, file reorginization

--- a/Architecture1.html
+++ b/Architecture1.html
@@ -6,6 +6,10 @@
        
     </head>
     <body>
+        <header>
+            <a href="index.html"><img src="Images/png-history-book-file-book-png2116-png-1600-3781013352.png" width="50" height="50"></a>
+            Search:<input type="search" name="search"><!--Figure out how to make search bar functional-->
+        </header>
         <center>
             <h1>Welcome to the Top 5 Types of Architecture Website</h1>
             <h2>Table of Contents</h2>
