--- a/Architecture2.html
+++ b/Architecture2.html
@@ -22,7 +22,7 @@
                 <p>Frank Lloyd Wright's Taliesin West</p>
                 <br>
             <h2>Table of Contents</h2>
-            <a href="Index.html">Neo-Classical</a>
+            <a href="Webpage1.html">Neo-Classical</a>
             <br>
             <a href="Webpage3.html">Art-Deco</a>
             <br>
