--- a/Architecture5.html
+++ b/Architecture5.html
@@ -21,7 +21,7 @@
         <p>Fun Fact: Daniel Libeskind was hired by the Royal Ontario Museum to make an exhibit, Seeing as what he made was High-Tech he decided to merge it with the traditional building of the museum.</p>
         <br>    
         <h2>Table of Contents</h2>
-            <a href="Index.html">Neo-Classical</a>
+            <a href="Webpage1.html">Neo-Classical</a>
             <br>
             <a href="Webpage2.html">Prairie</a>
             <br>
