--- a/Architecture3.html
+++ b/Architecture3.html
@@ -21,7 +21,7 @@
                 <p>Fellheimer & Wagner's Union Terminal</p>
                 <br>
             <h2> Table of Contents</h2>
-            <a href="Index.html">Neo-Classical</a>
+            <a href="Webpage1.html">Neo-Classical</a>
             <br>
             <a href="Webpage2.html">Prairie</a>
             <br>
