--- a/Architecture4.html
+++ b/Architecture4.html
@@ -28,7 +28,7 @@
             <p>Oscar Niemeyer's Palacio Do Planato</p>
             <br>
             <h2>Table of Contents</h2>
-            <a href="Index.html">Neo-Classical</a>
+            <a href="Webpage1.html">Neo-Classical</a>
             <br>
             <a href="Webpage2.html">Prairie</a>
             <br>
