--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     </head>
     <body>
         <div id="default_div">
-            Search:<input type="search" name="search"><!--Figure out how to make search bar functional-->
+            <header>
+                <a href="index.html"><img src="Images/png-history-book-file-book-png2116-png-1600-3781013352.png" width="50" height="50"></a>
+                Search:<input type="search" name="search"><!--Figure out how to make search bar functional-->
+                <section>
+                    <a href="Courses.html">Courses</a>
+                    <a href="Bio.html" style="color:rgb(143, 228, 140) ;">About Us</a>
+                    <a href="contacts.html" style="color:rgb(143, 228, 140) ;">Contacts</a>
+                </section>
+                <h1>LotfiVerma</h1>
+            </header>
         <center>
             <h1 style="text-align: center;">Welcome to the LotfiVerma project</h1>
         <h4 style="text-align: center;">Education is the key towards self liberation and prosperity</h3>
           <div id="main">
-            <a href="Architecture/Index.html" style="color:rgb(143, 228, 140);">Learn about Architecture</a>
+            <a href="Webpage1.html" style="color:rgb(143, 228, 140);">Learn about Architecture</a>
              <h2> Our Goals</h2>
               
              <ul> 
@@ -25,12 +34,5 @@
         </center>
         </div>
         <!--code for making the footer-->
-        <center>
-            <footer id="footer">
-            <a href="Bio.html" style="color:rgb(143, 228, 140) ;">About Us</a>
-            <br>
-            <a href="contacts.html" style="color:rgb(143, 228, 140) ;">Contacts</a>
-            </footer>
-        </center>
     </body>
 </html>
