🧹did a small cleanup

--- a/Courses.html
+++ b/Courses.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Explore these courses</h1>
         <section>
-        <a href="Webpage1.html"><h2>Types of Architecture</h2></a>
+        <a href="Architecture.html"><h2>Types of Architecture</h2></a>
         <h3>Overview:</h3>
         <p>You'll learn about the different types of architecture,their history,striking characteristics</p>
         <a href="IntroToChem.html">Chemistry</a>
