--- a/NeoClassicalArchitecture.html
+++ b/NeoClassicalArchitecture.html
@@ -1,31 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Top 5 Types of Architecture</title>
+        <title>Neo-Classical</title>
         <link rel="stylesheet" type="text/css" href="Stylesheet.css">
        
     </head>
     <body>
         <header>
             <a href="index.html"><img src="Images/png-history-book-file-book-png2116-png-1600-3781013352.png" width="50" height="50"></a>
-            Search:<input type="search" name="search"><!--Figure out how to make search bar functional-->
         </header>
         <center>
-            <h1>Welcome to the Top 5 Types of Architecture Website</h1>
-            <h2>Table of Contents</h2>
-            <p>Neo-Classical is further down the page</p>
-            <a href="Webpage2.html">Prairie</a>
-            <br>
-            <a href="Webpage3.html">Art-Deco</a>
-            <br>
-            <a href="Webpage4.html">Modernism</a>
-            <br>
-            <a href="Webpage5.html">High-Tech</a>
-            <br>
-            <a href="https://www.barnesandnoble.com/w/the-lego-architect-tom-alphin/1121116591">Source Material</a>
-            <br>
-            <br>
-                <h2>Neo-Classical</h2>
+                <h1>Neo-Classical</h1>
                 <p>Neo-Classical Architecture is a type of architecture that is combines greek and roman architecture.
                 <br> This type of architecture came from a renewed interest in anceint Greek and Roman literature,art, and design.
                 <br>Neo-Classical architecture consists of tall columns which usually descend from a triangular pediment, and usually has a domed roof.
@@ -38,5 +23,6 @@
                 <img src="Images/white-house.jpg" width=600 , height="400">
                 <p>James Hoban's, White House</p>
         </center>
+        <a href="https://www.barnesandnoble.com/w/the-lego-architect-tom-alphin/1121116591">Source Material</a>
     </body>
 </html>
