--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div id="default_div">
             <header>
                 <a href="index.html"><img src="Images/png-history-book-file-book-png2116-png-1600-3781013352.png" width="50" height="50"></a>
-                Search:<input type="search" name="search"><!--Figure out how to make search bar functional-->
+                <!--Search:<input type="search" name="search">(Figure out how to make search bar functional)-->
                 <section>
                     <a href="Courses.html">Courses</a>
                     <a href="Bio.html" style="color:rgb(143, 228, 140) ;">About Us</a>
@@ -24,12 +24,17 @@
              <h2> Our Goals</h2>
               
              <ul> 
-                   <li>To educate anyone, including non-English speakers</li>
-                   <li>Specifically towards low-income students who have a passion for learning but can't afford it</li>
-                   <li>To create a space where students can access the best materials for learning <br>not to need to go on a wild goose chase to get valid and trustworthy knowledge</li>
-                   <li>Prepare students for college-rigor and introduce them to adult life (How to manage your money and how to make passive income which includes investing</li>
-                   <li>To include different learning methods, language translations, auditory, videos,<br> articles, and a bunch of learning techniques that make the student comfortable with the way they learn and eliminate the need to confirm which harms their learning capability.</li>
+                    <!--Need an icon of the globe-->
+                   <li>make learning inclusive(this includes languages,learning styles)</li>
+                   <!--need an icon of a package-->
+                   <li>to package content in the best way possible</li>
+                   <!--an icon of a printing press-->
+                   <li>to be accessible to as many people as possible</li>
+                   
                </ul>
+               <h2>Hot and Fresh</h2>
+               <a href="IntroToChem.html"><img src="Images/chem.png" width="150" height="100"></a>
+               <p>Check out Chemistry newly compiled</p>
         </div>
         </center>
         </div>
